Defined billing and billingInfo controllers
