# api/ChattO/API/Controllers/BillingInfoController.cs
@@ -2,47 +2,45 @@
 using API.DTOs.Responses.Billing;
 using API.Helpers;
 using Application.Helpers;
-using Domain.Enums;
 using Microsoft.AspNetCore.Authorization;
-using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 
 namespace API.Controllers;
 
-public class BillingController : BaseController
+public class BillingInfoController : BaseController
 {
-    //Create billing by organization
-    [Authorize(Roles = RolesConstants.SuperAdmin)]
-    [HttpGet("{organizationId}")]
+    // Create a new billing info
+    [Authorize(Roles = RolesConstants.SystemAdmin)]
+    [HttpPost]
     [ProducesResponseType<bool>(StatusCodes.Status200OK)]
     [ProducesResponseType<string>(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status500InternalServerError)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<IActionResult> Create([FromBody] CreateBillingRequest request)
+    public async Task<IActionResult> Create([FromBody] CreateBillingInfoRequest request)
     {
         return Ok();
     }
 
-    //Get Billing by id
-    [Authorize(Roles = $"{RolesConstants.SystemAdmin}, {RolesConstants.SuperAdmin}")]
+    // Get billingInfos
+    [Authorize(Roles = $"{RolesConstants.SystemAdmin},{RolesConstants.SuperAdmin}")]
+    [HttpGet]
+    [ProducesResponseType<PagingResponse<BillingInfoResponse>>(StatusCodes.Status200OK)]
+    [ProducesResponseType<string>(StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(StatusCodes.Status500InternalServerError)]
+    [ProducesResponseType(StatusCodes.Status404NotFound)]
+    public async Task<IActionResult> Get()
+    {
+        return Ok();
+    }
+
+    // Get billingInfo by id
+    [Authorize(Roles = $"{RolesConstants.SystemAdmin},{RolesConstants.SuperAdmin}")]
     [HttpGet("{id}")]
-    [ProducesResponseType<BillingResponse>(StatusCodes.Status200OK)]
+    [ProducesResponseType<BillingInfoResponse>(StatusCodes.Status200OK)]
     [ProducesResponseType<string>(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status500InternalServerError)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     public async Task<IActionResult> GetById([FromRoute] Guid id)
-    {
-        return Ok();
-    }
-
-    // Get organization billings by organizationid
-    [Authorize(Roles = $"{RolesConstants.SystemAdmin}, {RolesConstants.SuperAdmin}")]
-    [HttpGet]
-    [ProducesResponseType<PagingResponse<BillingResponse>>(StatusCodes.Status200OK)]
-    [ProducesResponseType<string>(StatusCodes.Status400BadRequest)]
-    [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-    [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<IActionResult> Get([FromQuery] Guid organizationId)
     {
         return Ok();
     }
