# api/ChattO/API/DTOs/Responses/Billing/BillingResponse.cs
@@ -1,0 +1,14 @@
+﻿using Application.Helpers.Mappings;
+
+namespace API.DTOs.Responses.Billing;
+
+public class BillingResponse : IMapWith<Domain.Models.Billing>
+{
+    public Guid Id { get; set; }
+
+    public DateTime CreatedAt { get; set; }
+
+    public Guid OrganizationId { get; set; }
+
+    public BillingInfoResponse BillingInfo { get; set; }
+}
