# api/ChattO/Domain/Models/Billing.cs
@@ -3,7 +3,7 @@
 public class Billing
 {
     public Guid Id { get; set; }
-    public DateTime CreatedAt { get; set; }
+    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
     public Guid OrganizationId { get; set; }
     public virtual Organization Organization { get; set; }
     public Guid BillingInfoId { get; set; }
